--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,7 +11,7 @@ name: create and publish Docker image
 
 on:
   push:
-    branches: ['main']
+    branches: ['master']
 
 env:
   REGISTRY: ghcr.io
