--- a/chart/templates/deployment.yaml
+++ b/chart/templates/deployment.yaml
@@ -2,16 +2,17 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: {{ include "k8s-event-logger.fullname" . }}
-  namespace: {{ .Release.Namespace }}
   labels:
-    app.kubernetes.io/name: {{ include "k8s-event-logger.name" . }}
-    {{- include "k8s-event-logger.labels" . | nindent 4 }}
+{{ include "k8s-event-logger.labels" . | indent 4 }}
+{{- with .Values.annotations }}
+  annotations:
+{{- toYaml . | nindent 4 }}
+{{- end }}
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app.kubernetes.io/name: {{ include "k8s-event-logger.name" . }}
-      app.kubernetes.io/instance: {{ .Release.Name }}
+      {{- include "k8s-event-logger.selectorLabels" . | nindent 6 }}
   template:
     metadata:
 {{- with .Values.podAnnotations }}
@@ -20,7 +21,7 @@ spec:
 {{- end }}
       labels:
         app.kubernetes.io/name: {{ include "k8s-event-logger.name" . }}
-        app.kubernetes.io/instance: {{ .Release.Name }}
+        {{- include "k8s-event-logger.labels" . | nindent 8 }}
 {{- if .Values.podLabels }}
 {{ toYaml .Values.podLabels | indent 8 }}
 {{- end }}
@@ -29,13 +30,25 @@ spec:
       imagePullSecrets:
         {{- toYaml . | nindent 8 }}
     {{- end }}
+{{- if .Values.podSecurityContext }}
+      securityContext:
+{{- toYaml .Values.securityContext | nindent 8 }}
+{{- end }}
       serviceAccountName: {{ include "k8s-event-logger.fullname" . }}
       containers:
-        - name: {{ .Values.image.containerName }}
-          image: "{{ .Values.image.repository }}:{{ .Values.image.tag }}"
+        - name: {{ .Values.containerName}}
+          image: "{{ .Values.image.repository }}:{{ .Values.image.tag | default .Chart.AppVersion }}"
+{{- if .Values.service.enabled }}
+          ports:
+            - name: metrics
+              containerPort: {{ .Values.metrics.port }}
+              protocol: TCP
+{{- end }}
           imagePullPolicy: {{ .Values.image.pullPolicy }}
+{{- if .Values.podSecurityContext }}
           securityContext:
-            {{- toYaml .Values.securityContext | nindent 12 }}
+{{- toYaml .Values.podSecurityContext | nindent 12 }}
+{{- end }}
           env:
 {{- range $key, $value := .Values.env }}
           - name: {{ $key }}
